# Clothic-AI

./: .gitignore  LICENSE  README.md  pyproject.toml
campus_profiles/: default.json  exam_formal.json  lab_safety.json
configs/: dataset_sources.yaml  model_registry.yaml  pipeline.yaml  thresholds.json
deploy/: README.md
deploy/db/: schema.sql
deploy/tensorrt/: export.py
deploy/triton/model_repository/: README.md
docs/: ARCHITECTURE.md  DATASETS.md  MODELS.md  PAPER_ClothicAI_ID.md  STATUS.md
ontology/: garment_classes.yaml  taxonomy.yaml
ontology/mappings/: deepfashion2_to_canon.yaml  fashionpedia_to_canon.yaml  roboflow_campus.yaml  student_dresscode.yaml
scripts/: debug_sapiens.py  demo_webcam.py  test_detect.py  verify_full_backend.py
src/clothic/: __init__.py  cli.py  config.py  pipeline.py  schemas.py
src/clothic/api/: __init__.py  app.py  dashboard.py
src/clothic/eval/: __init__.py  metrics.py
src/clothic/explain/: __init__.py  counterfactual.py  explainer.py
src/clothic/fusion/: __init__.py  temporal.py
tests/: conftest.py  test_active_learning.py  test_api.py  test_calibration.py  test_counterfactual.py  test_coverage.py  test_eval.py  test_integration_parsing.py  test_lazy_imports.py  test_parsing_exposure.py  test_persistence.py  test_pipeline.py  test_rule_engine.py  test_scoring.py  test_tools.py
tools/: active_learning.py  dataset_unifier.py  fairness_audit.py  fetch_sapiens.py  fit_calibration.py  threshold_tuner.py
training/: README.md
training/stage_c_garment/: data.yaml  train.py
web/: app.js  index.html  style.css
(+16 files in other folders)
